Feat: Sale CRUD and Pagination Added

--- a/InventorySystem.Application/InventorySystem.Application.csproj
+++ b/InventorySystem.Application/InventorySystem.Application.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\InventorySystem.Domain\InventorySystem.Domain.csproj" />
+      <ProjectReference Include="..\InventorySystem.Infrastructure.EntryPoints\InventorySystem.Infrastructure.EntryPoints.csproj" />
     </ItemGroup>
 
     <ItemGroup>
